src/objects/ints__EfxReport_Error__c.object
<CustomObject>
    <fields>
        <fullName>ints__Description__c</fullName>
        <label>Description</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport Errors</relationshipLabel>
        <relationshipName>EfxReport_Errors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__ErrorCode__c</fullName>
        <label>ErrorCode</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__SourceCode__c</fullName>
        <label>SourceCode</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Error</label>
    <nameField>
        <displayFormat>EFX_ERR-{000000000}</displayFormat>
        <label>EfxReport Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>